// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dropdown select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiFormControl-root Select-rootFull"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="MuiSelect-root Select-root Select-rootFull"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select Select-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Select-input"
            role="button"
            tabindex="0"
          >
            text1
          </div>
          <input
            type="hidden"
            value="val1"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon Select-icon"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders native select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiFormControl-root Select-rootFull"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="MuiSelect-root Select-root Select-rootFull"
        >
          <select
            aria-invalid="false"
            class="MuiSelect-select Select-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Select-input"
          >
            <option
              value="val1"
            >
              text1
            </option>
            <option
              value="val2"
            >
              text2
            </option>
            <option
              value="val3"
            >
              text3
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon Select-icon"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
